--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "babel-eslint": "^9.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1"
+  },
+  "dependencies": {
+    "commander": "^2.18.0",
+    "gulp": "^3.9.1"
   }
 }
