--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "project-lvl2-s329",
-  "version": "1.0.0",
+  "name": "g-diff",
+  "version": "0.0.1",
   "description": "education project at hexlet.io",
   "main": "index.js",
   "scripts": {
