makes gendiff executable

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "g-diff",
+  "name": "gendiff-rmakarov",
   "version": "0.0.1",
   "description": "education project at hexlet.io",
   "main": "index.js",
