--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "education project at hexlet.io",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "babel-node": "babel-node",
     "eslint": "eslint",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
+  },
+  "bin": {
+    "gendiff": "dist/bin/gendiff.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,9 @@
     "hexlet"
   ],
   "author": "Roman Makarov",
+  "jest": {
+  "testEnvironment": "node"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SmartRW/project-lvl2-s329/issues"
