--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gendiff-rmakarov",
-  "version": "0.0.10",
-  "description": "education project at hexlet.io",
+  "version": "0.0.15",
+  "description": "Compares two configuration files and shows a difference.",
   "main": "",
   "scripts": {
     "test": "jest",
