--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "jest-cli": "^23.6.0"
   },
   "dependencies": {
-    "commander": "^2.18.0",
-    "gulp": "^3.9.1"
+    "commander": "^2.18.0"
   }
 }
