--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gendiff-rmakarov",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Compares two configuration files and shows a difference.",
   "main": "",
   "scripts": {
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "commander": "^2.18.0",
+    "js-yaml": "^3.12.0",
     "lodash": "^4.17.11"
   }
 }
