--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Compares two configuration files and shows a difference.",
   "main": "",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watch",
     "babel-node": "babel-node",
     "eslint": "eslint",
     "build": "NODE_ENV=production babel src --out-dir dist",
